crates/trawl-cli/src/tui/ui/snapshots/trawl__tui__ui__tests__render_empty_app.snap
---
source: crates/trawl-cli/src/tui/ui/mod.rs
expression: terminal.backend().to_string()
---
" M-1 Query   M-2 History   M-3 Schema   M-4 Saved                               "
"                                                                                "
"┌ Query Editor ────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Results ─────────────────────────────────────────────────────────────────────┐"
"│                                 trawl                                        │"
"│                                                                              │"
"│                     Command Palette: Ctrl+P                                  │"
"│                                Tabs: Alt+<num>                               │"
"│                                Quit: Ctrl+Q                                  │"
"│                                Docs: https://trawl.sh                        │"
"│                                                                              │"
"│                              Client: 0.1.15                                  │"
"│                              Server: —                                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [editor]                    Shift+Enter: execute | Ctrl+S: save | Ctrl+L: clear"
