crates/trawl-cli/src/tui/ui/snapshots/trawl__tui__ui__tests__render_narrow_terminal_with_results.snap
---
source: crates/trawl-cli/src/tui/ui/mod.rs
expression: terminal.backend().to_string()
---
" Query ✓   History   Schema   Saved               "
"                                                  "
"┌ Query Editor ──────────────────────────────────┐"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"└────────────────────────────────────────────────┘"
"┌ Results (2 rows, cols 1-3/3) ──────────────────┐"
"│ host     │ service  │ count                    │"
"│ web-1    │ nginx    │ 42                       │"
"│ web-2    │ api      │ 17                       │"
"│          │          │                          │"
"│          │          │                          │"
"│          │          │                          │"
"│          │          │                          │"
"│          │          │                          │"
"│          │          │                          │"
"└────────────────────────────────────────────────┘"
" [editor]                              ⏎ execute  "
