crates/trawl-cli/src/tui/ui/snapshots/trawl__tui__ui__tests__render_with_error_status.snap
---
source: crates/trawl-cli/src/tui/ui/mod.rs
expression: terminal.backend().to_string()
---
" S  1 ✗                                                  ctrl+t new  ctrl+w clos"
" H ┌ Query Editor ─────────────────────────────────────────────────────────────┐"
" Q │                                                                           │"
" R │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   └───────────────────────────────────────────────────────────────────────────┘"
"   ┌ Error ────────────────────────────────────────────────────────────────────┐"
"   │ error: parse error: unexpected token                                      │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   └───────────────────────────────────────────────────────────────────────────┘"
"   error: parse error: unexpected token [editor] F3: history | F4: saved | F1: h"
