crates/trawl-cli/src/tui/ui/snapshots/trawl__tui__ui__tests__render_with_help_popup.snap
---
source: crates/trawl-cli/src/tui/ui/mod.rs
expression: terminal.backend().to_string()
---
" M-1 Query   M-2 History   M-3 Schema   M-4 Saved       Shift+Enter run  F1 help"
"                                                                                "
"┌ Query Editor ────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│               ┌ Help ────────────────────────────────────────┐               │"
"│               │                                              │               │"
"│               │Navigation                                    │               │"
"│               │                                              │               │"
"│               │  Alt+1           - Query tab                 │               │"
"│               │  Alt+2           - History tab               │               │"
"│               │  Alt+3           - Schema tab                │               │"
"└───────────────│  Alt+4           - Saved tab                 │───────────────┘"
"┌ Results ──────│  Tab             - cycle focus / return to Qu│───────────────┐"
"│ no results yet│  Esc             - close panel / cancel / des│               │"
"│               │                                              │               │"
"│               │Query Editor                                  │               │"
"│               │                                              │               │"
"│               │  Shift+Enter     - execute query             │               │"
"│               │  Ctrl+Enter      - execute query (alt)       │               │"
"│               └──────────────────────────────────────────────┘               │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [editor]                                   M-2: history | M-4: saved | F1: help"
