crates/trawl-cli/src/tui/ui/snapshots/trawl__tui__ui__tests__render_with_results.snap
---
source: crates/trawl-cli/src/tui/ui/mod.rs
expression: terminal.backend().to_string()
---
" M-1 Query ✓   M-2 History   M-3 Schema   M-4 Saved                    F1 help  "
"                                                                                "
"┌ Query Editor ────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Results (5 rows, cols 1-3/3) ──────────────────────────────── Success (42ms) ┐"
"│ host     │ service  │ count                                                  │"
"│ web-1    │ nginx    │ 42                                                     │"
"│ web-2    │ api      │ 17                                                     │"
"│ db-1     │ postgres │ 3                                                      │"
"│ web-3    │ redis    │ 99                                                     │"
"│ lb-1     │ haproxy  │ 7                                                      │"
"│          │          │                                                        │"
"│          │          │                                                        │"
"│          │          │                                                        │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [editor]                                   M-2: history | M-4: saved | F1: help"
