crates/trawl-cli/src/tui/ui/snapshots/trawl__tui__ui__tests__render_with_save_popup.snap
---
source: crates/trawl-cli/src/tui/ui/mod.rs
expression: terminal.backend().to_string()
---
" M-1 Query   M-2 History   M-3 Schema   M-4 Saved                               "
"                                                                                "
"┌ Query Editor ────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│               ┌ Save Query ──────────────────────────────────┐               │"
"│               │                                              │               │"
"│               │                                              │               │"
"└───────────────│         Enter a name for this query:         │───────────────┘"
"┌ Results ──────│                                              │───────────────┐"
"│               │                  > my query█                 │               │"
"│               │                                              │               │"
"│               └──────────────────────────────────────────────┘               │"
"│                                Tabs: Alt+<num>                               │"
"│                                Quit: Ctrl+Q                                  │"
"│                                Docs: https://trawl.sh                        │"
"│                                                                              │"
"│                              Client: 0.1.18                                  │"
"│                              Server: —                                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [editor]                    Shift+Enter: execute | Ctrl+S: save | Ctrl+L: clear"
